attached_assets/Pasted-sipantichijk-penguin-church-project-SoC-cd-church-proje_1780940784375.txt
sipantichijk@penguin:~/church_project/SoC$ cd ~/church_project/SoC
source ~/efinity/2026.1/bin/setup.sh && export EFINITY_HOME=~/efinity/2026.1
EFX=~/efinity/2026.1

# ── Fix 1: Write SDC inline ───────────────────────────────────────────────
cat > church_soc_cm.sdc << 'EOF'
create_clock -name clk -period 40.0 [get_ports clk]
EOF
echo "SDC: $(cat church_soc_cm.sdc)"
ls -la church_soc_cm.sdc

# ── Fix 2: Patch int_design.py — suppress WARNING-level PTDsgGenConstException
# so gen_constraint() continues past timing failure and writes the LPF ──────
python3 << 'ENDPY'
import pathlib, re

p = pathlib.Path('/home/sipantichijk/efinity/2026.1/pt/bin/api_service/internal/int_design.py')
t = p.read_text()

# Find the raise statement that emits "Fail to generate Timing file"
if 'Fail to generate Timing file' not in t:
    print("ERROR: string not found in int_design.py")
else:
    # Show context so we can confirm the patch target
    idx = t.index('Fail to generate Timing file')
    snippet = t[max(0,idx-300):idx+100]
    print("CONTEXT around 'Fail to generate Timing file':")
    for i, line in enumerate(snippet.splitlines()):
        print(f"  {line}")
stty -F /dev/ttyUSB1 57600 raw -echo && timeout 5 cat /dev/ttyUSB1 | cat -v || truel -8 echo "peri.xml verified clean"
/usr/bin/ldd: line 41: printf: write error: Broken pipe
/usr/bin/ldd: line 43: printf: write error: Broken pipe
WARNING: Failed to determine system libstdc++ version. The Efinity software may not function correctly on this system.

SDC: create_clock -name clk -period 40.0 [get_ports clk]
-rw-r--r-- 1 sipantichijk sipantichijk 52 Jun  8 13:45 church_soc_cm.sdc
ERROR: string not found in int_design.py
Patch 6: no match — showing all PTDsgGenConstException raises:
  line 1136: raise pte.PTDsgGenConstException(
  line 1165: raise pte.PTDsgGenConstException("Design is empty. Fail to generate PCR file", MsgLevel.warning)
  line 1173: raise pte.PTDsgGenConstException("Fail to generate PCR file", MsgLevel.warning, exc)
  line 1183: raise pte.PTDsgGenConstException("Design is empty. Fail to generate route file", MsgLevel.warning)
  line 1191: raise pte.PTDsgGenConstException("Fail to generate rouue file", MsgLevel.warning, exc)
  line 1203: raise pte.PTDsgGenConstException("Design is empty. Fail to generate interface configuration file",
  line 1213: raise pte.PTDsgGenConstException("Fail to generate interface configuration file", MsgLevel.warning, exc)
  line 1225: raise pte.PTDsgGenConstException("Design is empty. Fail to generate timing related files", MsgLevel.warning)
  line 1239: raise pte.PTDsgGenConstException(f"Fail to generate timing related files", MsgLevel.warning, exc)
  line 1249: raise pte.PTDsgGenConstException(
  line 1259: raise pte.PTDsgGenConstException(
  line 1275: raise pte.PTDsgGenConstException(
  line 1284: raise pte.PTDsgGenConstException(
  line 1333: raise pte.PTDsgGenConstException("Design is empty. Fail to generate option register file",
  line 1342: raise pte.PTDsgGenConstException("Fail to generate option register file", MsgLevel.warning, exc)
  File "<stdin>", line 16
    grep -c "pll_inst\|comp_output_clock" church_soc_cm.peri.xml && echo "STILL HAS PLL" || echo "peri.xml verified clean"
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
=== INTERFACE DESIGNER ===
Writing out verilog template file
Writing out option register file
Writing out routing trace
Writing out boundary scan description file
WARNING: Fail to generate Timing file
Fail to generate outputs
LPF STILL MISSING
=== PNR ===
Running: efx_run_pnr.py church_soc_cm --prj /home/sipantichijk/church_project/SoC/church_soc_cm.xml --family Titanium --device Ti60F225 --timing_model C3 --output_dir outflow --work_dir work_pnr --opt sdc_file=/home/sipantichijk/church_project/SoC/church_soc_cm.sdc --opt sync_file=church_soc_cm.peri.xml
   pnr :        FAIL 
INFO     : No SDC file found.  Using default timing constraint of 1 ns.
INFO     : NOTE:  Use --sdc_file <SDC_FILE> to override this behavior.
  Launch Clock    Capture Clock   Constraint (ns)     Slack (ns)          Edge
  Launch Clock    Capture Clock   Constraint (ns)     Slack (ns)          Edge
INFO     : No SDC file found.  Using default timing constraint of 1 ns.
INFO     : NOTE:  Use --sdc_file <SDC_FILE> to override this behavior.
  Launch Clock    Capture Clock   Constraint (ns)     Slack (ns)          Edge
  Launch Clock    Capture Clock   Constraint (ns)     Slack (ns)          Edge
=== BITSTREAM ===
Running: efx_run_pgm.py church_soc_cm --family Titanium --device Ti60F225 --output_dir outflow --work_dir work_pnr --opt mode=active width=1 enable_roms=smart spi_low_power_mode=on io_weak_pullup=on oscillator_clock_divider=DIV8 bitstream_compression=on enable_external_master_clock=off active_capture_clk_edge=posedge jtag_usercode=0xFFFFFFFF release_tri_then_reset=on
   pgm :        PASS 
-rw-r--r-- 1 sipantichijk sipantichijk 2.2M Jun  8 13:14 outflow/church_soc_cm.hex
=== FLASH ===
empty
write to flash
Can't read iSerialNumber field from FTDI: considered as empty string
Jtag frequency : requested 6.00MHz   -> real 6.00MHz  
Can't read iSerialNumber field from FTDI: considered as empty string
Jtag frequency : requested 6.00MHz   -> real 6.00MHz  
Parse file DONE
use: /usr/share/openFPGALoader/spiOverJtag_efinix_ti60f225.bit.gz
Load SRAM: [==================================================] 100.00%
Done
097f0000
Detail: 
Jedec ID          : ef
memory type       : 60
memory capacity   : 17
flash chip unknown: use basic protection detection
start addr: 00000000, end_addr: 000c0000
Erasing: [==================================================] 100.00%